@@ -1,0 +1,54 @@
+/* -*- C -*- */
+/*
+ * weak.h
+ *
+ *   Copyright (c) 2010  Takashi Kato <ktakashi@ymail.com>
+ *
+ *   Redistribution and use in source and binary forms, with or without
+ *   modification, are permitted provided that the following conditions
+ *   are met:
+ *
+ *   1. Redistributions of source code must retain the above copyright
+ *      notice, this list of conditions and the following disclaimer.
+ *
+ *   2. Redistributions in binary form must reproduce the above copyright
+ *      notice, this list of conditions and the following disclaimer in the
+ *      documentation and/or other materials provided with the distribution.
+ *
+ *   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ *   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ *   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ *   A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+ *   OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ *   SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+ *   TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ *   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ *   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ *   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ *   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ *  $Id: $
+ */
+#ifndef SAGITTARIUS_WEAK_H_
+#define SAGITTARIUS_WEAK_H_
+
+#include "sagittariusdefs.h"
+
+typedef struct SgWeakVectorRec {
+  SG_HEADER;
+  int   size;
+  void *pointers;		/* opaque */
+} SgWeakVector;
+
+#define SG_WEAK_VECTOR(obj)  ((SgWeakVector*)(obj))
+#define SG_WEAK_VECTORP(obj) (SG_PTRP(obj) && IS_TYPE(obj, TC_WEAK_VECTOR))
+
+SG_CDECL_BEGIN
+
+SG_EXTERN SgObject Sg_MakeWeakVector(int size);
+SG_EXTERN SgObject Sg_WeakVectorRef(SgWeakVector *v, int index, SgObject fallback);
+SG_EXTERN SgObject Sg_WeakVectorSet(SgWeakVector *v, int index, SgObject value);
+
+SG_CDECL_END
+
+#endif /* SAGITTARIUS_WEAK_H_ */
